[gd_scene load_steps=6 format=2]

[ext_resource path="res://import/2d/pause_screen/button_reset_level.png" type="Texture" id=1]
[ext_resource path="res://import/2d/pause_screen/button_resume.png" type="Texture" id=2]
[ext_resource path="res://import/2d/pause_screen/button_quit_to_menu.png" type="Texture" id=3]
[ext_resource path="res://import/2d/pause_screen/button_quit_game.png" type="Texture" id=4]
[ext_resource path="res://scripts/pause_screen.gd" type="Script" id=5]

[node name="pause_screen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opaque Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.505882 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 180.0
margin_bottom = 400.0
custom_constants/separation = 15

[node name="button_reset_level" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 27.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )

[node name="VSeparator" type="Control" parent="MarginContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 184.0
margin_right = 574.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 578.0
margin_right = 824.0
margin_bottom = 400.0
custom_constants/separation = 15
alignment = 2

[node name="button_quit_to_menu" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 345.0
margin_right = 246.0
margin_bottom = 369.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="button_quit_game" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 384.0
margin_right = 246.0
margin_bottom = 400.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="button_resume" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -15.0
margin_right = 73.0
margin_bottom = 15.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/button_reset_level" to="." method="_on_button_reset_level_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/button_quit_to_menu" to="." method="_on_button_quit_to_menu_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/button_quit_game" to="." method="_on_button_quit_game_pressed"]
[connection signal="pressed" from="button_resume" to="." method="_on_button_resume_pressed"]
